<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">移动护理</string>
    <string name="hospital">河南省洛阳正骨医院</string>
    <string name="title_activity_patient_flow_path">PatientFlowPathActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notification">提示</string>
    <string name="delete">删除</string>
    <string name="make_sure">确定</string>
    <string name="scan_excetion">扫码异常</string>
    <string name="scan_patient_no">扫描患者不符</string>
    <string name="scan_drag_no">扫描药品不符</string>
    <string name="scan_bloodbag_no">扫描血袋不符</string>
    <string name="scan_specimen_no">扫描标本不符</string>
    <string name="scan_barcode_no">扫描条码不符</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="not_save">不保存</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_fail">提交失败</string>
    <string name="submit_exception">提交异常</string>
    <string name="processing">执行中</string>
    <string name="to_be_execute">待执行</string>
    <string name="checklist_patient_fail">患者身份核对失败</string>
    <string name="checklist_patient_success">患者身份已核对</string>
    <string name="checklist_patient_wrong">患者身份核对错误</string>
    <string name="make_sure_delete">确定删除吗</string>
    <string name="operating">正在操作</string>
    <string name="update_fail">更新不成功</string>
    <string name="title_activity_patient_flowpath">PatientFlowpathActivity</string>
    <string name="title_activity_patient_flow">PatientFlowActivity</string>
    <string name="netstate_content">网络连接不可用,请检查手机网络信号.</string>
    <string name="fialtoloadpatient">患者数据加载失败，联系运维</string>
    <string name="title_activity_orders">科室病人－医嘱</string>
    <string name="title_activity_pio">科室病人－PIO</string>
    <string name="nursing_documentation">添加护理记录</string>
    <string name="title_activity_pio_records">护理记录</string>
    <string name="title_activity_add_pio">增加PIO</string>
    <string name="title_activity_icu">增加ICU记录</string>
    <string name="title_activity_transfusion">TransfusionActivity</string>
    <string name="title_activity_icub">ICUBActivity</string>
    <string name="title_activity_blood_sugar">BloodSugarActivity</string>
    <string name="title_activity_test">test</string>
    <string name="toast_contact_operations">通知列表加载失败，请联系运维</string>
    <string name="act_my_notice">我的通知</string>
    <string name="notice_template_name_exp">静脉给药</string>
    <string name="notice_time_exp">6个小时前</string>
    <string name="notice_content_exp">袁献华正在输血,2个单位的输A型（RH+）去白细胞红细胞,2单位，病人袁献华输血30分钟</string>
    <string name="notice_template_name">静脉给药</string>
    <string name="blood_sugar_patient_bed_number_exp">床号：36</string>
    <string name="blood_sugar_patient_name_exp">姓名：潘永红</string>
    <string name="blood_sugar_project">项&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;目:</string>
    <string name="blood_sugar_numerical"><![CDATA[血  糖  值:]]></string>
    <string name="blood_sugar_unit">mmol/L</string>
    <string name="blood_sugar_notice_first">病人血糖值</string>
    <string name="blood_sugar_notice_second">高于</string>
    <string name="blood_sugar_notice_third">异常值，病人医师</string>
    <string name="blood_sugar_switch_first">待执行0</string>
    <string name="blood_sugar_switch_second">执行中0</string>
    <string name="dataloading">数据加载中...</string>
    <string name="execute_exception">操作异常</string>
    <string name="HomeActLoadCurrentPatient">HomeAct加载当前病人</string>
    <string name="blood_sugar_notice">请输入血糖值</string>
    <string name="blood_sugar_fail">血糖保存失败</string>
    <string name="blood_sugar_success">血糖保存成功</string>
    <string name="blood_sugar_limit_max_line">上限:</string>
    <string name="blood_sugar_limit_min_line">下限:</string>
    <string name="blood_sugar_back">返 回</string>
    <string name="blood_sugar_Result">结果：</string>
    <string name="please_scan_paient_by_infrared">请使用红外扫描核对患者</string>
    <string name="please_input_patient_code">手动输入病人腕带编号</string>
    <string name="checklist_again">再次核对</string>
    <string name="patient_name">姓名:</string>
    <string name="bed_label">床号:</string>
    <string name="bed">床</string>
    <string name="get_pio_success">获取pio记录成功</string>
    <string name="do_not_have_relate_date">暂无关联数据,请手动输入.</string>
    <string name="get_pio_fail">获取pio记录失败</string>
    <string name="pio_item_class_p">P</string>
    <string name="please_input_nursing_problem">请手动输入护理问题</string>
    <string name="pio_item_clas_c">C</string>
    <string name="please_input_nursing_cause">请手动输入护理致因</string>
    <string name="pio_item_class_i">I</string>
    <string name="please_input_nursing_target">请手动输入护理目标</string>
    <string name="pio_item_class_o">O</string>
    <string name="please_input_nursing_measure">请手动输入护理措施</string>
    <string name="please_choose_nursing_problem">请选择护理问题</string>
    <string name="please_choose_relate_item">请选择相关选项</string>
    <string name="is_save_input_message">是否保存输入的信息?</string>
    <string name="please_input_measure_then_submit">请输入护理措施再提交</string>
    <string name="please_input_problem_then_submit">请输入护理问题再提交</string>
    <string name="please_choose_time">请选择时间</string>
    <string name="this_patient_do_not_have_icu_record">当前病人在此查询时间没有ICU反面的记录</string>
    <string name="save_fail">保存失败</string>
    <string name="load_order_message">医嘱加载...</string>
    <string name="order_execute">医嘱执行</string>
    <string name="order_all">全部</string>
    <string name="intravenous_name">静脉给药</string>
    <string name="insulin_name">胰岛素</string>
    <string name="blood_sugar_name">血糖</string>
    <string name="transfusion_blood">输血管理</string>
    <string name="do_not_find_patient_message">没有找到该病人信息</string>
    <string name="please_input_message_first">请先输入信息</string>
    <string name="please_input_evaluation">请输入评价</string>
    <string name="failtocheckpatient">患者身份核对错误</string>
    <string name="dataexception">数据异常，联系运维人员</string>
    <string name="sealing">封管</string>
    <string name="nomal">正常</string>
    <string name="toofast">过快</string>
    <string name="tooslow">过慢</string>
    <string name="exception">异常</string>
    <string name="pause">暂停</string>
    <string name="loadingdata">正在加载数据...</string>
    <string name="sealingsucessed">封管成功!</string>
    <string name="intialtime">00:00:00</string>
    <string name="patrolrecordssuccessed">巡视记录成功</string>
    <string name="endblood">结束输血</string>
    <string name="endbloodsuccessed">结束输血成功</string>
    <string name="endinfusion">结束输液</string>
    <string name="thelackoforders">医嘱缺少TemplateId,联系运维</string>
    <string name="pleasescanthepatientwristbands">请扫描患者腕带...</string>
    <string name="inputpatientcode">输入患者腕带号</string>
    <string name="look">观察</string>
    <string name="sealinging">封管...</string>
    <string name="tpr_maybe_wrong">录入数据异于正常值\n建议核对无误保存</string>
    <string name="input_tpr">录入TPR</string>
    <string name="tpr_history">TPR历史记录</string>
    <string name="tiwen">体温</string>
    <string name="maibo">脉搏</string>
    <string name="xintiao">心跳</string>
    <string name="shijian">时间</string>
    <string name="submit_with_blank">提 交</string>
    <string name="recordsucessed"/>
    <string name="savesuccessed">保存成功</string>
    <string name="saveing">正在保存...</string>
    <string name="inputspeed">输入滴速值</string>
    <string name="inputtemperaturvalue">输入体温值</string>
    <string name="inputpulsvalue">输入脉搏值</string>
    <string name="inputrespiration">输入呼吸值</string>
    <string name="speed_history">滴速历史记录</string>
    <string name="disu">滴速</string>
    <string name="no_speed_history">无滴速记录，请录入后保存</string>
    <string name="input_speed">录入滴速</string>
    <string name="huxi">呼吸</string>
    <string name="speed_maybe_wrong">初始输血滴速，请设置小于20滴/分钟</string>
    <string name="tso_start_time_title">输血开始时间：</string>
    <string name="tso_start_time_content">15点32分</string>
    <string name="tso_end_time_content">16点32分</string>
    <string name="tso_end_time_title">首次巡视时间：</string>
    <string name="surplus_time">剩余时间：</string>
    <string name="had_not_choosen">尚未选中</string>
    <string name="nonotification">暂无通知数据</string>
    <string name="refresh">刷新</string>
    <string name="scan">扫描</string>
    <string name="pleaseselectbloodsugarorder">请选择输血医嘱</string>
    <string name="getpatientdatapleaseholdon">获取病人信息，请稍后</string>
    <string name="bloodend">输血结束</string>
    <string name="givedrug">给药</string>
    <string name="starttime">开始时间：</string>
    <string name="tso_surplus_time">15分00秒</string>
    <string name="how_to_use">用法:</string>
    <string name="use_by_water">水煎服</string>
    <string name="yin_xing">阴性</string>
    <string name="pi_shi">皮试:</string>
    <string name="pin_ci">频次:</string>
    <string name="how_many">用量:</string>
    <string name="di_su">滴速:</string>
    <string name="long_time">长期</string>
    <string name="long_or_short">长临:</string>
    <string name="order_context">医嘱数据有误，请不要执行</string>
    <string name="performed">已执行</string>
    <string name="yang_xing">O/阳性</string>
    <string name="apply_no">100001</string>
    <string name="two_dan_wei">2单位</string>
    <string name="datasaving">数据保存...</string>
    <string name="endmedicial">结束给药...</string>
    <string name="notice_message_title">提示信息</string>
    <string name="advise_not_leave">输血前15分钟，不建议离开病人的床前,是否离开</string>
    <string name="drugloading">药品加载...</string>
    <string name="loginoutapp">退出移动护理</string>
    <string name="end">结束</string>
    <string name="saving">正在保存...</string>
    <string name="pleaseinputpluse">请录入脉搏</string>
    <string name="pleaseinputrespire">请录入呼吸</string>
    <string name="pleaseinputtemperature">请录入体温</string>
    <string name="getprogressworkfial">获取工作项目失败</string>
    <string name="Pleasecheckthebloodquality">请核对血品质量</string>
    <string name="pleasecheckthebloodproductpackaging">请核对血品包装</string>
    <string name="pleasecheckthebloodforbloodbags">请核对血品血袋号</string>
    <string name="pleasecheckthebloodmatchresultsinformation">请核对血品配血结果信息</string>
    <string name="bloodchecksuccess">血品核对成功</string>
    <string name="gettingsectiondatalater">正在获取科室数据,请稍后...</string>
    <string name="pressoncetoexittheprogram">再按一次退出程序</string>
    <string name="unstable">请到网络良好环境操作</string>
    <string name="pleaseinputspeed">请输入滴速</string>
    <string name="speedinput">滴速输入</string>
    <string name="thereasonofdont">不执行原因</string>
    <string name="administrationtimefailstoload">给药时间加载失败</string>
    <string name="startdelivery">开始给药</string>
    <string name="deliveryfailed">给药操作失败</string>
    <string name="title_activity_orders_list">OrdersListAct</string>
    <string name="tryonclick">点击重试</string>
    <string name="excutesuccesd">执行成功</string>
    <string name="excutefail">执行失败</string>
    <string name="recordsuccess">记录成功</string>
    <string name="recordfail">记录失败</string>
    <string name="operationissuccessful">操作成功</string>
    <string name="operationfailed">操作失败</string>
    <string name="updatesuccessful">更新成功</string>
    <string name="updatefailed">更新失败</string>
    <string name="thistimethepatientdidnothaveICUrecords">此时间该病人没有ICU记录</string>
    <string name="modifiedsuccessfully">修改成功</string>
    <string name="modifiedfailed">修改失败</string>
    <string name="confirmdelivery">确认给药</string>
    <string name="pleasemanualcheck">请人工核对</string>
    <string name="standardoperation">请规范操作</string>
    <string name="clear_data"><![CDATA[<]]></string>
    <string name="qing">清</string>
    <string name="shutdown">关闭</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
</resources>