<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!--键盘区域-->
    <RelativeLayout
        android:id="@+id/layout_define_keyboard_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/layout_define_keyboard_area_one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="19dp"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_two"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_one"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_three"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_two"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_four"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_three"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_five"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_four"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/clear_data"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_six"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_one"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_seven"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_two"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_six"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_eight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_three"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_seven"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_nine"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_four"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_eight"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_eleven"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_six"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/one"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_twelve"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_seven"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_eleven"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/two"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_thirteen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_eight"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_twelve"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/three"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_fourteen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_nine"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_thirteen"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/four"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_fifteen"
            android:layout_width="50dp"
            android:layout_height="170dp"
            android:layout_below="@+id/layout_define_keyboard_area_ten"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_fourteen"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/shutdown"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_sixteen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_eleven"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/five"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_seventeen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_twelve"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_sixteen"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/six"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_eighteen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_thirteen"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_seventeen"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/seven"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_nineteen"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_fourteen"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_eighteen"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/eight"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_twenty"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_sixteen"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/nine"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_twenty_one"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_seventeen"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_twenty"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/zero"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_twenty_two"
            android:layout_width="119dp"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_define_keyboard_area_eighteen"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_twenty_one"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/dot"
            android:textColor="#333333"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/layout_define_keyboard_area_ten"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/key_borad_style"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/qing"
            android:textColor="#333333"
            android:textSize="25sp"
            android:layout_toEndOf="@+id/layout_define_keyboard_area_nine"
            android:layout_below="@+id/layout_define_keyboard_area_five"/>

    </RelativeLayout>

    <View
        android:id="@+id/layout_define_keyboard_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/layout_define_keyboard_area"
        android:background="#bdbdbd"/>

    <RelativeLayout
        android:id="@+id/layout_define_keyboard_layoutBack"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_above="@+id/layout_define_keyboard_line"
        android:background="#f5f5f5"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/keyboard_back_img"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/layout_define_keyboard_layoutBack"
        android:layout_marginTop="1dp"
        android:background="#bdbdbd"/>

</RelativeLayout>