<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_icon_notice"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="@drawable/skin_item_notice_visit" />

            <TextView
                android:id="@+id/tv_txt_notice"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="巡视"
                android:textColor="@color/three_eight_blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_content_nf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|bottom"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/notice_template_name_exp"
                    android:textColor="@color/black_text_title"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="@string/notice_time_exp"
                    android:textColor="@color/black_text_title"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_content_notice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:text="@string/notice_content_exp"
                android:textColor="@color/black_text_content"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_black_line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black_text_title" />

</LinearLayout>